kompose/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lamp: "true"
        io.kompose.service: nginx
    spec:
      containers:
      - image: bitnami/nginx:1.18-debian-10
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/bitnami/nginx/conf/server_blocks/yourapp.conf
          name: nginx-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nginx-claim0
        persistentVolumeClaim:
          claimName: nginx-claim0
status: {}
