kompose/phpfpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: phpfpm
  name: phpfpm
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpfpm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/lamp: "true"
        io.kompose.service: phpfpm
    spec:
      containers:
      - image: php:7.4-fpm-alpine
        imagePullPolicy: ""
        name: phpfpm
        resources: {}
        volumeMounts:
        - mountPath: /app
          name: phpfpm-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: phpfpm-claim0
        persistentVolumeClaim:
          claimName: phpfpm-claim0
status: {}
