kompose/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  type: NodePort
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8080
  selector:
    io.kompose.service: adminer
status:
  loadBalancer: {}
